fixed z-index video

--- a/src/app/containers/Ataraxia/containers/Main/main.css
+++ b/src/app/containers/Ataraxia/containers/Main/main.css
@@ -27,6 +27,13 @@
         -webkit-transform: translateX(-50%) translateY(-50%);
         transform: translateX(-50%) translateY(-50%);
     }
+    .icon {
+        width: 60px;
+        margin-top: 50px;
+        &:hover {
+            opacity: 0.7;
+        }
+    }
 }
 
 .container_next_events{
